--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -183,14 +183,12 @@
 			});
 			window.addEventListener('cid', function(event) {
 				var id = event.detail.id;
-				// var id="100006";
 				getinfo(id);
-				// alert(id);
 			});
-			//			$(function(){
-			//				var id2="100006";
-			//				getinfo(id2);
-			//			});
+						$(function(){
+							var id2="100006";
+							getinfo(id2);
+						});
 
 			//*********************share start
 			var shares = {};
@@ -204,18 +202,11 @@
 						}
 					}
 				}, function() {
-					console.log("获取分享服务列表失败");
+					console.log("share server fail");
 				});
 			});
 
-			//		setTimeout(function () {
-			//			defaultImg();
-			//			setTimeout(function() {
-			//				initImgPreview();
-			//			}, 300);
-			//		},500);
-
-			//分享链接点击事件
+			//onclick share
 			document.getElementById("share").addEventListener('tap', function() {
 				var ids = [{
 							id: "weixin",
@@ -224,26 +215,12 @@
 							id: "weixin",
 							ex: "WXSceneTimeline"
 						}
-						//				, {
-						//					id: "sinaweibo"
-						//				}, {
-						//					id: "tencentweibo"
-						//				}, {
-						//					id: "qq"
-						//				}
 					],
 					bts = [{
 							title: "发送给微信好友"
 						}, {
 							title: "分享到微信朋友圈"
 						}
-						//	, {
-						//					title: "分享到新浪微博"
-						//				}, {
-						//					title: "分享到腾讯微博"
-						//				}, {
-						//					title: "分享到QQ"
-						//				}
 					];
 				plus.nativeUI.actionSheet({
 					cancel: "取消",
@@ -260,11 +237,11 @@
 								share.authorize(function() {
 									shareMessage(share, ids[i - 1].ex);
 								}, function(e) {
-									console.log("认证授权失败：" + e.code + " - " + e.message);
+									console.log("error：" + e.code + " - " + e.message);
 								});
 							}
 						} else {
-							mui.toast("无法获取分享服务，请检查manifest.json中分享插件参数配置，并重新打包")
+							mui.toast("can not get share server")
 						}
 					}
 				});
@@ -279,9 +256,6 @@
 				msg.href = "http://www.baidu.com";
 				msg.title = TextMessage.sharetitle;
 				msg.content = TextMessage.sharecontent;
-				//				if(~share.id.indexOf('weibo')) {
-				//					msg.content += "；体验地址：http://www.dcloud.io/hellomui/";
-				//				}
 				msg.thumbs = ["../../../images/muwu.jpg"];
 				share.send(msg, function() {
 					console.log(TextMessage.share + "\"" + share.description + "\"" + TextMessage.success);
@@ -292,10 +266,6 @@
 			//share end***********/
 			function getinfo(pid) {
 				var params = {
-					//"nickname": auth.userInfo.nickname,
-					//"headimgurl": auth.userInfo.headimgurl,
-					//"tokencheck":"",
-					//"signcheck":"1492595038170_6076769b79e6c90e57f2b1f95b2fc605c3e9231e31a9f215773ff2263f4af43b_2bfd58a24210902eb67948f568aaa9ecf314e34a35ddb4ea7fd553908b0e0f4e",
 					"commodity_id": pid
 				};
 				Repository.Commodity.commodityDetail(params, {
@@ -308,20 +278,13 @@
 					}
 				});
 			}
-			//			// get id show product detail
-			//			function send(param) {
-			//				var proid = param;
-			//
-			//			}
 			//message show
 			function messageshow(results) {
 				var commodity = results.data;
 				var comdbasic = commodity.commodity_basic;
-				//var comdinfo=JSON.stringify(comdbasic[0]);
 				var comdname = comdbasic[0].comm_name;
 				var comdmesage = comdbasic[0].comm_detail;
 				var comdityid = comdbasic[0].commodity_id;
-				//console.log("comdityid:"+comdityid);
 				$(".kankan_productname").html(comdname); //name
 				$(".kankan_det_information").html(comdmesage); //message
 				$(".mui-title").html(comdname); //title
@@ -332,7 +295,6 @@
 				});
 				var imgsarr = commodity.commodity_imgs;
 				var htmlimg = "";
-				//console.log(imgsarr.length);
 				for(i = 0; i < imgsarr.length; i++) {
 					var la = imgsarr.length - 1 * 1;
 					$(".firstimage img").attr("src", imgsarr[0]);
@@ -340,9 +302,7 @@
 					htmlimg += '<div class="mui-slider-item">';
 					htmlimg += '<img src="' + imgsarr[i] + '">';
 					htmlimg += '</div>';
-					//console.log(imgsarr[i]);
 				}
-				//console.log(htmlimg);
 				$(".firstimage").after(htmlimg);
 				var goodcount = commodity.commodity_praise.praise_count;
 				$("#zanshu").html(goodcount);
@@ -377,7 +337,6 @@
 				var business = commodity.commodity_buy_way.business;
 				var gratis = commodity.commodity_buy_way.gratis;
 				var price = comdbasic[0].price;
-				//console.log("exchange:"+exchange+" business:"+business+" gratis:"+gratis+" price:"+price);
 				if(exchange == "1") {
 					$("#switchex").show();
 				} else {
@@ -400,7 +359,6 @@
 				recomendhtml += '<ul class="mui-table-view mui-grid-view">';
 				var recomendsarrs = commodity.commodity_recommend;
 				var recomdlenght = recomendsarrs.length;
-				//alert(recomdlenght);
 				var recomendsobj = {};
 				var recomendaddhtml = ""; //add dom
 				var c = 0;
@@ -408,15 +366,12 @@
 					var k = j + 1 * 1;
 					var recomendsobj1 = JSON.stringify(recomendsarrs[j]);
 					recomendsobj = $.parseJSON(recomendsobj1);
-					//console.log(recomendsobj1);
 					var recomdimg = recomendsobj.commodity_photo_url;
 					var recomdid = recomendsobj.commodity_id;
 					var advflag = recomendsobj.is_ad;
-					//console.log("recomdid:"+recomdid);
 					recomendhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 					recomendhtml += '<a href="detail.html" id="' + recomdid + '">';
 					recomendhtml += '<img class="mui-media-object" src="' + recomdimg + '">';
-					//recomendhtml+='<div>'+j+'content</div>';
 					recomendhtml += '</a></li>';
 					var vall = k % 4;
 					if(vall == 0 || j == recomdlenght - 1) {
@@ -430,7 +385,6 @@
 					recomendaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 					recomendaddhtml += '<a href="detail.html" id="' + recomdid + '">';
 					recomendaddhtml += '<img class="mui-media-object" src="' + recomdimg + '">';
-					//recomendaddhtml+='<div>'+j+'add</div>';
 					recomendaddhtml += '</a></li>';
 					if(j < 4) {
 						$("#firstremmondul").html(recomendaddhtml);
@@ -441,30 +395,24 @@
 				}
 				recomendhtml2 += recomendhtml;
 				$("#lastrecommend").after(recomendhtml2);
-				//*************************************************/
+				//recommend end*********************************/
 				//*************************************concenered
 				var concernhtml2 = "";
 				var concernhtml = '<div class="mui-slider-item">';
 				concernhtml += '<ul class="mui-table-view mui-grid-view">';
 				var concernarrs = commodity.user_praise_commoditys;
 				var concernlenght = concernarrs.length;
-				//alert(concernlenght);
 				var concernsobj = {};
 				var concernaddhtml = ""; //add dom
-				//var k=0;
 				for(var l = 0; l < concernlenght; l++) {
 					var m = l + 1 * 1;
-					//console.log("l:"+l+" m:"+m);
 					var concernobj1 = JSON.stringify(concernarrs[l]);
 					concernsobj = $.parseJSON(concernobj1);
-					//console.log(recomendsobj1);
 					var concernimg = concernsobj.commodity_photo_url;
 					var concernid = concernsobj.commodity_id;
-					//console.log("concernid:"+concernid);
 					concernhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 					concernhtml += '<a href="detail.html" id="' + concernid + '">';
 					concernhtml += '<img class="mui-media-object" src="' + concernimg + '">';
-					//concernhtml+='<div>'+l+'content</div>';
 					concernhtml += '</a></li>';
 					var vallm = m % 4;
 					if(vallm == 0 || l == concernlenght - 1) {
@@ -478,7 +426,6 @@
 					concernaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 					concernaddhtml += '<a href="detail.html" id="' + concernid + '">';
 					concernaddhtml += '<img class="mui-media-object" src="' + concernimg + '">';
-					//concernaddhtml+='<div>'+l+'add</div>';
 					concernaddhtml += '</a></li>';
 					if(l < 4) {
 						$("#firstconcerul").html(concernaddhtml);
@@ -488,19 +435,16 @@
 					}
 
 				}
-				//console.log(concernaddhtml);
 				concernhtml2 += concernhtml;
 				$("#lastconcenered").after(concernhtml2);
-				//*************************************************/
+				//concenered end**************************************/
 				//buy way
 				var buy_sell_flag = comdbasic[0].buy_sell_flag;
-				//console.log("buy_sell_flag:"+buy_sell_flag);
 				if(buy_sell_flag == "1") {
 					$(".ka_buyway").hide();
 				}
 				//praise staute
 				var user_praise_status = commodity.commodity_praise.user_praise_status;
-				//console.log("user_praise_status:"+user_praise_status);
 				if(user_praise_status == "0") {
 					$("#zanqian").show();
 					$("#zanhou").hide();
@@ -512,7 +456,6 @@
 				var prolistpage = null;
 				mui('.productlist').on('tap', 'a', function(e) {
 					var id = commodity.user_basic.user_id;;
-					// alert(id);
 					if(!prolistpage) {
 						prolistpage = plus.webview.getWebviewById('productslist.html');
 					}
@@ -554,30 +497,8 @@
 			}
 			//goods
 			function dianzan(bid) {
-				function praise(aid) {
-					if(aid == "zanqian") {
-						document.getElementById(aid).style.display = "none";
-						document.getElementById("zanhou").style.display = "block";
-						var goodbefor = document.getElementById("zanshu").innerHTML * 1;
-						var gooafter = goodbefor + 1 * 1;
-						document.getElementById("zanshu").innerHTML = gooafter;
-						//mui("#zanshu").Style("color: #000000;margin-right: 0.1em;");
-						//alert(gooafter);
-					} else {
-						//alert(aid);
-						document.getElementById(aid).style.display = "none";
-						document.getElementById("zanqian").style.display = "block";
-						var goodbefor = document.getElementById("zanshu").innerHTML * 1;
-						var gooafter = goodbefor - 1 * 1;
-						document.getElementById("zanshu").innerHTML = gooafter;
-						//alert(gooafter);
-					}
-				}
-
 				//ajax post 
 				var params1 = {
-					//"tokencheck":"+GGzMiM28W8dy+XxzQAl4x3L5fHNACXjh/PqKa19BIs=70760a3f4cbcc375c67df5c75919adbe09b8aca4fc25fa6d7068bcd66169a108",
-					//"signcheck":"1492595038170_6076769b79e6c90e57f2b1f95b2fc605c3e9231e31a9f215773ff2263f4af43b_2bfd58a24210902eb67948f568aaa9ecf314e34a35ddb4ea7fd553908b0e0f4e",
 					"commid": "10"
 				};
 				Repository.Commodity.praise(params1, {
@@ -593,7 +514,24 @@
 						}
 					}
 				});
+				
 			}
+			//praise css controll
+			function praise(aid) {
+					if(aid == "zanqian") {
+						document.getElementById(aid).style.display = "none";
+						document.getElementById("zanhou").style.display = "block";
+						var goodbefor = document.getElementById("zanshu").innerHTML * 1;
+						var gooafter = goodbefor + 1 * 1;
+						document.getElementById("zanshu").innerHTML = gooafter;
+					} else {
+						document.getElementById(aid).style.display = "none";
+						document.getElementById("zanqian").style.display = "block";
+						var goodbefor = document.getElementById("zanshu").innerHTML * 1;
+						var gooafter = goodbefor - 1 * 1;
+						document.getElementById("zanshu").innerHTML = gooafter;
+					}
+				}
 		</script>
 	</body>
 
